# arus-components-hci

./: README.md  doc.py  index.html  pyproject.toml  streams.html
.github/workflows/: ci.yml  test.yml
arus_components_hci/: streams.py
examples/: demo_annotator_stream.py
templates/: config.mako  credits.mako  css.mako  html.mako
